--- a/README.adoc
+++ b/README.adoc
@@ -43,6 +43,12 @@ Build just one SPLASH2 benchmark:
 parsecmgmt -a build -p splash2x.barnes
 ....
 
+List all benchmarks:
+
+....
+parsecmgmt -a info
+....
+
 Run one benchmark with one input size, listed in by increasing size:
 
 ....
