--- a/README.adoc
+++ b/README.adoc
@@ -274,14 +274,20 @@ parsecmgmt -a run -p all
 
 https://parsec.cs.princeton.edu/overview.htm gives an overview of some of them, but it is too short to be understood. TODO: go over all of them with sample input/output analysis! One day.
 
-=== apps vs kernels vs netapps
+=== apps vs kernels
 
-Everything under netapps is a net version of something under app, e.g.
+=== netapps
+
+Documented at: https://parsec.cs.princeton.edu/parsec3-doc.htm#network
+
+____
+PARSEC 3.0 provides three server/client mode network benchmarks which leverage a user-level TCP/IP stack library for communication. 
+____
+
+Everything under netapps is a networked version of something under app, e.g.
 
 * `pkgs/kernels/dedup/`
 * `pkgs/netapps/netdedup`
-
-Does that mean it is a version that can be parallelized over the network?
 
 === SPLASH2
 
@@ -290,6 +296,12 @@ Was apparently a separate benchmark that got merged in.
 This is suggested e.g. at https://parsec.cs.princeton.edu/overview.htm which compares SPLASH2 as a separate benchmark to parsec, linking to the now dead http://www-flash.stanford.edu/apps/SPLASH/
 
 This is also presumably why splash went in under `ext`.
+
+https://parsec.cs.princeton.edu/parsec3-doc.htm#splash2 documents it as
+
+____
+SPLASH-2 benchmark suite includes applications and kernels mostly in the area of high performance computing (HPC). It has been widely used to evaluate multiprocessors and their designs for the past 15 years.
+____
 
 === pkg/libs
 
@@ -309,7 +321,7 @@ pkgs/libs/glib/parsec/gcc.bldconf:17:build_deps="zlib"
 
 so they were essentially building their own distro. They should have used Buildroot poor newbs!
 
-Two deps in particular are special PARSEC things and used widely:
+Two deps in particular are special things used widely across many benchmarks:
 
 * <<hooks>>
 * <<tbblib>>
@@ -320,7 +332,7 @@ git grep 'build_deps="[^"]'
 
 ==== hooks
 
-Hooks are instrumentation hooks that get performance metrics out. They have several flavors for different environement, e.g. native vs magic simulator instructions.
+Hooks are instrumentation hooks that get performance metrics out. They have several flavors for different environment, e.g. native vs magic simulator instructions.
 
 The addition of hook points on several meaningful workloads is basically one of PARSEC's most important features.
 
